--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,53 +1,48 @@
-name: flutter_news_app
-description: A new Flutter project.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+name: flutter_clean_architecture
+description: Flutter Clean Architecture Series
+publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.19.2 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.0
-  
-  flutter_hooks: ^0.15.0
-  get_it: ^5.0.3
-  retrofit: ^1.3.4+1
-  floor: ^0.18.0
-  
-  flutter_bloc: ^6.1.1
-  equatable: ^1.2.5
 
-  # icons
-  ionicons: ^0.0.3
+  # Icons
+  cupertino_icons: ^1.0.0
+  ionicons: ^0.2.2
+
+  # Networking
+  retrofit: ^3.3.0
+  dio: ^4.0.6
+
+  # State Management
+  flutter_bloc: ^8.1.2
+
+  # Others
+  flutter_hooks: ^0.18.5+1
+  get_it: ^7.2.0
+  floor: ^1.4.1
+  equatable: ^2.0.5
+  oktoast: ^3.3.1
+  awesome_dio_interceptor: ^0.0.2+4
+  auto_route: ^5.0.4
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  retrofit_generator: ^1.4.1
-  floor_generator: ^0.18.0
-  build_runner: ^1.10.11
-  lint: ^1.0.0
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-# The following section is specific to Flutter.
+  lint: ^2.0.1
+  auto_route_generator: ^5.0.3
+  retrofit_generator: ^4.1.2
+  floor_generator: ^1.4.1
+  build_runner: ^2.3.3
+
 flutter:
-
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
 
-  # Assets
-  # assets:
-  #   - assets/images/
-  # Fonts
   fonts:
     - family: Butler
       fonts:
